<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ResultsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/auditoryScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auditory_score"
            android:layout_marginTop="16dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/visualScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visual_score"
            android:layout_marginTop="16dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tactileScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tactile_score"
            android:layout_marginTop="16dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_learning_style"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learning_style"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/styleDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/learning_style"
        android:textSize="17sp"
        android:textColor="#575757"/>

    <Button
        android:id="@+id/showStudyMethods"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/study_methods"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:background="@drawable/round_btn"/>

    <Button
        android:id="@+id/closeResults"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/round_btn"/>

</LinearLayout>