<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".StudyMethodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:paddingBottom="10sp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/back_button"
            android:background="@color/white"
            android:contentDescription="@string/back_button"
            android:padding="5dp"/>

    </LinearLayout>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="370dp"
        android:src="@drawable/questionnaire"
        android:contentDescription="@string/study_method"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_difficult_to_concentrate"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_this_questionnaire_to_n_understand_about_your_own_n_study_method"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginBottom="25sp"/>

    <Button
        android:id="@+id/questionnaireButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_questionnaire"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/round_btn"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"/>

</LinearLayout>