<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ForgetPasswordEmail">

    <!-- Forgot Password Image -->
    <ImageView
        android:layout_width="250sp"
        android:layout_height="250sp"
        android:src="@drawable/forget_password"
        android:contentDescription="@string/forget_password"/>

    <!--Get User Email-->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/get_user_email"
        android:layout_width="260sp"
        android:layout_height="48sp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10sp"
        android:hint="@string/enter_your_email"
        android:textColor="@color/black"
        android:textColorHint="#626465"
        android:textSize="20sp" />

    <!--Progress bar-->
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!--Change Password Button-->
    <Button
        android:id="@+id/change_password_email"
        android:layout_width="260sp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_btn"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:text="@string/forget_password_instructions"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

</LinearLayout>