<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_editor_absoluteX="1sp"
    app:layout_editor_absoluteY="1sp"
    android:background="#D1C4E9"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".VisualMethodsActivity">

        <!-- Visual Study Methods Topic -->
        <TextView
            android:id="@+id/visualTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/visual_study_methods"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <!-- Card View for Study Methods -->

        <!-- Method 1 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/visualMethod1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/visualTopic"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="28dp"
            android:layout_margin="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/mindMapMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mind_map_method"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/mindMapDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mindMapMethod"
                    android:text="@string/MindMapMethod"
                    android:textSize="17sp"
                    android:layout_marginTop="5dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:layout_below="@id/mindMapDesc"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/mind_map_method"
                    android:contentDescription="@string/mind_map_method"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <!-- Method 2 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/visualMethod2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/visualMethod1"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="28dp"
            android:layout_margin="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/flashCardMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flashcard_method"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/flashCardDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/flashCardMethod"
                    android:text="@string/FlashcardMethod"
                    android:textSize="17sp"
                    android:layout_marginTop="5dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:layout_below="@id/flashCardDesc"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/flashcard_method"
                    android:contentDescription="@string/flashcard_method"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>